# AI-cart-engine-school-project

./: AI_cart.ipynb  README.md  README_SUMMARY_CZ.md  README_WORKFLOW.md  constants.py  main.py  pyproject.toml
AI_engines/: AIbrain_TeamName.py  AIbrain_linear.py  AIbrain_vers.py
DefaultSettings/: .~lock.DefaultRace.csv#
UI/: Button.py  MakeGrid.py  TextInput.py
UserData/: first.csv  karel.csv  test.csv  training_map_01.csv
UserData/SAVES/: BL0.npz  BL1.npz  BL3.npz  BL_test.npz  test.npz  test_save.npz  userbrain.npz
core/: CsvTilemap.py  TextureAtlas.py  VectorIterator.py  car_manager.py  map_generator.py  map_visualizer.py
my_sprites/: AI_car.py  block.py  car.py
scenes/: DuelScene.py  MapEditorScene.py  MenuScene.py  PlayGameScene.py  SceneManager.py  TrainingScene.py
